--- a/MyCalaulator/app/src/main/res/layout/activity_main.xml
+++ b/MyCalaulator/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/tvInput"
         android:gravity="right|bottom"
-        android:text="@string/calc_text"
+        android:text=""
         android:textSize="48sp"
         android:padding="10dp"
         android:background="@color/light_grey"
@@ -56,7 +56,7 @@
             android:text="@string/divide"
             android:backgroundTint="@color/btn_grey"
             android:layout_width="0dp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:layout_height="match_parent"/>
     </LinearLayout>
 
@@ -99,7 +99,7 @@
             android:text="@string/multi"
             android:backgroundTint="@color/btn_grey"
             android:layout_width="0dp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:layout_height="match_parent"/>
     </LinearLayout>
 
@@ -142,7 +142,7 @@
             android:text="@string/subtract"
             android:backgroundTint="@color/btn_grey"
             android:layout_width="0dp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:layout_height="match_parent"/>
     </LinearLayout>
 
@@ -153,8 +153,17 @@
         android:layout_height="wrap_content">
 
         <Button
+            android:id="@+id/btnDot"
+            android:layout_weight="1"
+            android:text="@string/dot"
+            android:backgroundTint="@color/btn_grey"
+            android:layout_width="0dp"
+            android:onClick="onDecimalPoint"
+            android:layout_height="match_parent"/>
+
+        <Button
             android:id="@+id/btn0"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:text="@string/_0"
             android:backgroundTint="@color/btn_grey"
             android:layout_width="0dp"
@@ -177,7 +186,7 @@
             android:text="@string/plus"
             android:backgroundTint="@color/btn_grey"
             android:layout_width="0dp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:layout_height="match_parent"/>
     </LinearLayout>
 
@@ -193,7 +202,7 @@
             android:text="@string/equl"
             android:backgroundTint="@color/btn_grey"
             android:layout_width="0dp"
-            android:onClick="onDigit"
+            android:onClick="onEqual"
             android:layout_height="match_parent"/>
 
     </LinearLayout>
