--- a/MyDrawindapp/app/src/main/res/layout/activity_main.xml
+++ b/MyDrawindapp/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,146 @@
         android:id="@+id/drawing_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/bg_drawing_view_layout"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/ll_color_selector"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <LinearLayout
+        android:id="@+id/ll_color_selector"
+        app:layout_constraintTop_toBottomOf="@+id/drawing_view"
+        app:layout_constraintBottom_toTopOf="@+id/ib_brush"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:layout_margin="2dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/yellow"
+            android:background="@color/yellow"
+            android:onClick="paintClicked"
+            />
+
+        <ImageButton
+            android:layout_margin="2dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/skin"
+            android:background="@color/skin"
+            android:onClick="paintClicked"
+            />
+
+        <ImageButton
+            android:layout_margin="2dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/pink"
+            android:background="@color/pink"
+            android:onClick="paintClicked"
+            />
+
+        <ImageButton
+            android:layout_margin="2dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/red"
+            android:background="@color/red"
+            android:onClick="paintClicked"
+            />
+
+        <ImageButton
+            android:layout_margin="2dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/green"
+            android:background="@color/green"
+            android:onClick="paintClicked"
+            />
+
+        <ImageButton
+            android:layout_margin="2dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/sky"
+            android:background="@color/sky"
+            android:onClick="paintClicked"
+            />
+
+        <ImageButton
+            android:layout_margin="2dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/blue"
+            android:background="@color/blue"
+            android:onClick="paintClicked"
+            />
+
+        <ImageButton
+            android:layout_margin="2dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/puple"
+            android:background="@color/puple"
+            android:onClick="paintClicked"
+            />
+
+        <ImageButton
+            android:layout_margin="2dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/random"
+            android:background="@color/random"
+            android:onClick="paintClicked"
+            />
+
+        <ImageButton
+            android:layout_margin="2dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/white"
+            android:background="@color/white"
+            android:onClick="paintClicked"
+            />
+
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/ib_brush"
+        android:layout_margin="5dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_brush"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <ImageButton
+        android:id="@+id/ib_undo"
+        android:layout_margin="5dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_undo"
+        app:layout_constraintTop_toBottomOf="@+id/drawing_view"
+        app:layout_constraintLeft_toRightOf="@+id/ib_brush"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
