--- a/MyDrawindapp/app/src/main/res/values/colors.xml
+++ b/MyDrawindapp/app/src/main/res/values/colors.xml
@@ -2,4 +2,18 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="brush">#656565</color>
+    <color name="brush_select">#FF333333</color>
+
+    <color name="yellow">#FFEB3B</color>
+    <color name="skin">#FFDFB1</color>
+    <color name="pink">#FFBABA</color>
+    <color name="red">#F44336</color>
+    <color name="green">#4CAF50</color>
+    <color name="sky">#03A9F4</color>
+    <color name="blue">#3F51B5</color>
+    <color name="puple">#673AB7</color>
+    <color name="random">#CDDC39</color>
+
+
 </resources>
