update) 갤러리에서 이미지 불러오기, 취소 롤백 버튼 기능 추가

--- a/MyDrawindapp/app/src/main/res/layout/activity_main.xml
+++ b/MyDrawindapp/app/src/main/res/layout/activity_main.xml
@@ -195,6 +195,14 @@
             />
 
         <ImageButton
+            android:id="@+id/ib_redo"
+            android:layout_margin="5dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_action_redo"
+            />
+
+        <ImageButton
             android:id="@+id/ib_save"
             android:layout_margin="5dp"
             android:layout_width="50dp"
