--- a/Permission/app/src/main/res/layout/activity_main.xml
+++ b/Permission/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="permission"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnSnackBarTest"/>
+
+    <Button
+        android:id="@+id/btnSnackBarTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="스낵바 테스트 페이지"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btnPermission" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
