--- a/MyDrawindapp/app/src/main/res/layout/activity_main.xml
+++ b/MyDrawindapp/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_foreground"
+            tools:src="@drawable/ic_launcher_foreground"
             />
 
         <com.mbsysoft.myapplication.DrawindView
