--- a/MyExerciseApp/app/src/main/res/layout/activity_main.xml
+++ b/MyExerciseApp/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="@dimen/main_screen_main_layout_padding"
     tools:context=".MainActivity">
 
     <ImageView
@@ -13,6 +13,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/fl_start"
+        android:contentDescription="@string/image"
+        android:src="@drawable/img_main_page"
         android:layout_width="match_parent"
         android:layout_height="220dp"/>
 
@@ -21,15 +23,16 @@
         app:layout_constraintTop_toBottomOf="@+id/iv_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/item_circular_color_accent_border_ripple_background"
         android:layout_width="150dp"
         android:layout_height="150dp">
 
         <TextView
             android:id="@+id/tv_"
-            android:text="START"
+            android:text="@string/start"
             android:layout_gravity="center"
             android:textColor="@color/colorPrimary"
-            android:textSize="22sp"
+            android:textSize="@dimen/default_text_size_btn"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
