update) 타이머 ui 제작

--- a/MyExerciseApp/app/src/main/res/values/themes.xml
+++ b/MyExerciseApp/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.MyExerciseApp" parent="Base.Theme.MyExerciseApp" />
+
+    <style name="ToolbarTheme" parent="@style/ThemeOverlay.MaterialComponents.ActionBar">
+        <item name="colorControlNormal">@color/toolbar_color_control_normal</item>
+    </style>
 </resources>
