--- a/MyExerciseApp/app/src/main/res/values/colors.xml
+++ b/MyExerciseApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorPrimaryDark">#B2212121</color>
     <color name="colorAccent">#008F24</color>
     <color name="lightGrey">#C4C4C4</color>
+
+    <color name="toolbar_color_control_normal">#FF9800</color>
 </resources>
