--- a/MyExerciseApp/app/src/main/res/values/dimens.xml
+++ b/MyExerciseApp/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="main_screen_main_layout_padding">16dp</dimen>
+    <dimen name="default_text_size">22sp</dimen>
     <dimen name="default_text_size_btn">22sp</dimen>
+    <dimen name="timer">25sp</dimen>
 </resources>
