--- a/MyExerciseApp/app/src/main/res/drawable/circular_progress_grey.xml
+++ b/MyExerciseApp/app/src/main/res/drawable/circular_progress_grey.xml
@@ -5,10 +5,9 @@
             android:innerRadiusRatio="2.7"
             android:shape="ring"
             android:thicknessRatio="50.0"
-            android:useLevel="true"
+            android:useLevel="false"
             >
             <solid android:color="@color/lightGrey"/>
         </shape>
-            <!--        -->
     </item>
 </layer-list>
